--- a/app/src/main/res/layout/activity_hiflying_sniffer_smart_linker.xml
+++ b/app/src/main/res/layout/activity_hiflying_sniffer_smart_linker.xml
@@ -68,6 +68,7 @@
                 android:background="@null"
                 android:gravity="center_vertical"
                 android:imeOptions="actionNext"
+                android:inputType="textPassword"
                 android:maxLines="1"
                 android:singleLine="true"
                 android:textColor="@color/color_33"
@@ -122,9 +123,9 @@
         android:id="@+id/button_hiflying_smartlinker_start"
         android:layout_width="match_parent"
         android:layout_height="@dimen/common_42"
-        android:layout_marginTop="@dimen/common_24"
         android:layout_marginLeft="@dimen/common_42"
         android:layout_marginRight="@dimen/common_42"
+        android:layout_marginTop="@dimen/common_24"
         android:background="@drawable/btn_wifi_selector"
         android:gravity="center"
         android:text="确定"
