--- a/app/src/main/res/layout/dialog_no_wifi_connect.xml
+++ b/app/src/main/res/layout/dialog_no_wifi_connect.xml
@@ -48,6 +48,7 @@
         android:layout_marginRight="@dimen/common_58"
         android:layout_marginTop="@dimen/common_44"
         android:background="@drawable/btn_wifi_selector"
+        style="?android:attr/borderlessButtonStyle"
         android:gravity="center"
         android:text="去连接"
         android:textColor="@color/colorWhite"
