--- a/app/src/main/res/layout/activity_sweeper.xml
+++ b/app/src/main/res/layout/activity_sweeper.xml
@@ -303,6 +303,7 @@
             android:orientation="horizontal">
 
             <LinearLayout
+                android:id="@+id/lin_detail"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_alignParentBottom="true"
