--- a/app/src/main/res/layout/dialog_connecting_wifi.xml
+++ b/app/src/main/res/layout/dialog_connecting_wifi.xml
@@ -15,6 +15,7 @@
         android:visibility="visible">
 
         <TextView
+            android:id="@+id/text_dialog_title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerHorizontal="true"
@@ -34,14 +35,15 @@
             />
     </RelativeLayout>
 
+    <!--app:progress_color="@color/blue_btn_press"-->
+
     <wtwd.com.superapp.widget.RingProgressView
         android:id="@+id/ring_circle"
-        android:layout_width="@dimen/common_66"
-        android:layout_height="@dimen/common_66"
-        android:layout_marginTop="@dimen/common_26"
-        app:progress_color="@color/blue_btn_press"
+        android:layout_width="@dimen/common_106"
+        android:layout_height="@dimen/common_106"
+        android:layout_marginTop="@dimen/common_16"
         app:progress_width="@dimen/common_14"
-        app:ring_color="@color/color_66"
+        app:ring_color="@color/color_f3"
         app:text_color="@color/color_33"
         app:top_text=" "
         app:bottom_unit_text=" "
