--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="colorAccent">#FF4081</color>
 
     <color name="transparent">#00000000</color>
-    <color name="index_bg">#f6f7f9</color>
+    <color name="index_bg">#E7E7E7</color>
 
     <color name="line_bg">#e5e5e5</color>
     <color name="colorWhite">#ffffff</color>
