添加寻找扫地机功能，定时任务界面

--- a/app/src/main/res/layout/activity_choose_register.xml
+++ b/app/src/main/res/layout/activity_choose_register.xml
@@ -7,7 +7,14 @@
     android:orientation="vertical"
     tools:context="wtwd.com.superapp.activity.ChooseRegisterActivity">
 
-    <include layout="@layout/tool_bar" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"
+        >
+
+        <include layout="@layout/tool_bar" />
+    </LinearLayout>
 
 
     <RelativeLayout
