--- a/app/src/main/res/layout/activity_phone_register.xml
+++ b/app/src/main/res/layout/activity_phone_register.xml
@@ -9,7 +9,14 @@
 
     tools:context="wtwd.com.superapp.activity.PhoneRegisterActivity">
 
-    <include layout="@layout/tool_bar" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"
+        >
+
+        <include layout="@layout/tool_bar" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
