--- a/app/src/main/res/layout/activity_register_success.xml
+++ b/app/src/main/res/layout/activity_register_success.xml
@@ -9,7 +9,14 @@
     android:orientation="vertical"
     tools:context="wtwd.com.superapp.activity.RegisterSuccessActivity">
 
-    <include layout="@layout/tool_bar" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"
+        >
+
+        <include layout="@layout/tool_bar" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/img_register_type"
