--- a/app/src/main/res/layout/activity_add_sweeper_alarm.xml
+++ b/app/src/main/res/layout/activity_add_sweeper_alarm.xml
@@ -7,7 +7,14 @@
     android:orientation="vertical"
     tools:context="wtwd.com.superapp.activity.AddSweeperAlarmActivity">
 
-    <include layout="@layout/tool_bar" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite"
+        >
+
+        <include layout="@layout/tool_bar" />
+    </LinearLayout>
 
     <ImageView
         android:layout_width="match_parent"
