--- a/app/src/main/res/layout/activity_sweeper.xml
+++ b/app/src/main/res/layout/activity_sweeper.xml
@@ -8,7 +8,14 @@
     android:orientation="vertical"
     tools:context="wtwd.com.superapp.activity.SweeperActivity">
 
-    <include layout="@layout/tool_bar" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorSweeperText"
+        >
+
+        <include layout="@layout/tool_bar" />
+    </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
