--- a/app/src/main/res/layout/activity_sweeper_set.xml
+++ b/app/src/main/res/layout/activity_sweeper_set.xml
@@ -8,7 +8,13 @@
     android:orientation="vertical"
     tools:context="wtwd.com.superapp.activity.SweeperSetActivity">
 
-    <include layout="@layout/tool_bar" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorWhite">
+
+        <include layout="@layout/tool_bar" />
+    </LinearLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -67,6 +73,71 @@
 
     </RelativeLayout>
 
+    <RelativeLayout
+        android:id="@+id/relative_appointment_clean"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/common_54"
+        android:layout_marginTop="1dp"
+        android:background="@drawable/linearlayout_click_bg"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/common_14"
+            android:text="预约清扫"
+            android:textColor="@color/color_33"
+            android:textSize="@dimen/text_14" />
+
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/common_14"
+            android:background="@mipmap/right" />
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:id="@+id/relative_position_sweeper"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/common_54"
+        android:layout_marginTop="1dp"
+        android:background="@drawable/linearlayout_click_bg"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="@dimen/common_14"
+            android:text="定位扫地机"
+            android:textColor="@color/color_33"
+            android:textSize="@dimen/text_14" />
+
+        <!--<TextView-->
+        <!--android:layout_width="wrap_content"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:layout_alignParentRight="true"-->
+        <!--android:layout_marginLeft="@dimen/common_14"-->
+        <!--android:layout_marginRight="@dimen/common_14"-->
+        <!--android:textColor="@color/color_99"-->
+        <!--android:textSize="@dimen/text_14" />-->
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="@dimen/common_14"
+            android:background="@mipmap/right" />
+
+
+    </RelativeLayout>
 
     <Button
         android:id="@+id/btn_delete_device"
