--- a/app/src/main/res/layout/fragment_main_family.xml
+++ b/app/src/main/res/layout/fragment_main_family.xml
@@ -3,13 +3,15 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/lin_bg"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    >
 
     <!--android:background="@mipmap/main_family_has_device_bg"-->
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+    <!--<LinearLayout-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="match_parent"-->
+        <!--android:orientation="vertical">-->
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -490,5 +492,5 @@
                 android:layout_marginTop="@dimen/common_4"
                 android:visibility="gone" />
         </LinearLayout>
-    </LinearLayout>
+    <!--</LinearLayout>-->
 </LinearLayout>
