--- a/app/src/main/res/layout/activity_appoint_clean_set.xml
+++ b/app/src/main/res/layout/activity_appoint_clean_set.xml
@@ -11,8 +11,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorWhite"
-        >
+        android:background="@color/colorWhite">
 
         <include layout="@layout/tool_bar" />
     </LinearLayout>
@@ -23,6 +22,56 @@
         android:layout_marginTop="1dp"
         android:background="@color/colorWhite">
 
+        <View
+            android:id="@+id/view_center"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_centerInParent="true" />
+
+        <wtwd.com.superapp.widget.wheelpicker.WheelPicker
+            android:id="@+id/wheel_picker_hour"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/common_6"
+            android:layout_marginTop="@dimen/common_6"
+            android:layout_toLeftOf="@id/view_center"
+            android:background="@color/colorWhite"
+            app:wheel_curved="true"
+            app:wheel_cyclic="true"
+            app:wheel_indicator="true"
+            app:wheel_indicator_color="@color/blue_btn_start_color"
+            app:wheel_indicator_size="1dp"
+            app:wheel_item_space="@dimen/common_2"
+            app:wheel_item_text_color="@color/color_33_alpha_60"
+            app:wheel_item_text_size="@dimen/text_16"
+            app:wheel_selected_item_text_color="@color/color_33"
+            app:wheel_visible_item_count="5" />
+
+        <wtwd.com.superapp.widget.wheelpicker.WheelPicker
+            android:id="@+id/wheel_picker_minute"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="@dimen/common_6"
+            android:layout_marginTop="@dimen/common_6"
+            android:layout_toRightOf="@id/view_center"
+            android:background="@color/colorWhite"
+            app:wheel_curved="true"
+            app:wheel_cyclic="true"
+            app:wheel_indicator="true"
+            app:wheel_indicator_color="@color/blue_btn_start_color"
+            app:wheel_indicator_size="1dp"
+            app:wheel_item_space="@dimen/common_2"
+            app:wheel_item_text_color="@color/color_33_alpha_60"
+            app:wheel_item_text_size="@dimen/text_16"
+            app:wheel_selected_item_text_color="@color/color_33"
+            app:wheel_visible_item_count="5" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text=":"
+            android:textColor="@color/color_33" />
 
     </RelativeLayout>
 
@@ -50,8 +99,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/common_22"
             android:layout_marginRight="@dimen/common_8"
-            android:layout_marginTop="@dimen/common_14"
-            />
+            android:layout_marginTop="@dimen/common_14" />
 
     </LinearLayout>
 
